# buildreach

./: .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  dev.sh  docker-compose.offline.yml  docker-compose.production.yml  docker-compose.yml  findings.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py  seed.py  seed_categories.py  seed_zone_demo.py
backend/scripts/: _log_setup.py  backfill_thumbnails.py  backfill_translations.py  flag_zone_soe_low_score.py  generate_product_thumbnails.py  import_categories.py  import_categories_xfs.py  import_products.py  import_products_1688.py  import_products_xfs.py  import_products_xfs_v2.py  import_zone_soe_images.py  import_zone_soe_images_matches.py  import_zone_soe_materials.py  normalize_moq_unit.py  reset_db.sh  seed_banners.py  seed_categories.py  seed_floors.py  upload_xfs_images_to_s3.py
backend/tests/: conftest.py  test_admin_users_disable.py  test_ai_summary_api.py  test_attachments.py  test_audit.py  test_audit_coverage.py  test_audit_query.py  test_auth.py  test_auth_sessions.py  test_banner.py  test_banner_unit.py  test_buyer_events.py  test_cambodia_data_source.py  test_cambodia_no_mock.py  test_cart.py  test_categories.py  test_contact.py  test_credit_scope.py  test_datetime_helper.py  test_email_verification_config_unit.py  test_error_codes.py  test_evaluation_status_field.py  test_free_rfq_and_quote_attachments.py  test_harvest_cache.py  test_harvest_failure_fallback.py  test_harvest_task_integration.py  (+35 more)
(+431 files in other folders)
