[project]
name = "overseas-supply-backend"
version = "0.1.0"
description = "央企海外工程供应链平台 · 后端(认证 / RBAC / 审计底座)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.18",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "openpyxl>=3.1.0",
    # 信用评估 AI 综合评价 + 对话追问;走 DashScope OpenAI 兼容端点
    "openai>=1.40.0",
    # Δ7 v0.3:柬埔寨域名白名单 YAML 配置加载
    "pyyaml>=6.0",
    "Pillow>=10.0.0",
    # i18n 翻译:Google Cloud Translation v3
    "google-cloud-translate>=3.15.0",
    # i18n 翻译:阿里云机器翻译通用版
    "aliyun-python-sdk-core>=2.16.0",
    "aliyun-python-sdk-alimt>=3.2.0",
    "phonenumbers>=9.0.32",
    # i18n 补译自动化:调度扫描
    "apscheduler>=3.10.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
